Added the weeks seed data

--- a/WeeklyTimeUtility.csproj
+++ b/WeeklyTimeUtility.csproj
@@ -85,7 +85,14 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="weeks.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy "$(ProjectDir)weeks.txt" "$(ProjectDir)bin\debug"
+copy "$(ProjectDir)weeks.txt" "$(ProjectDir)bin\release"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
