--- a/WeeklyTimeUtility.csproj
+++ b/WeeklyTimeUtility.csproj
@@ -59,6 +59,12 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmWeekEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmWeekEdit.Designer.cs">
+      <DependentUpon>frmWeekEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
@@ -69,6 +75,9 @@
     <Compile Include="WeekData.cs" />
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmWeekEdit.resx">
+      <DependentUpon>frmWeekEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
